# MLOpsLabs

./: .gitignore  README.md  main.py  pyproject.toml
diabete-mlflow/: .gitignore  run_experiments.py
diabete-mlflow/models/: report_RF_baseline.txt  report_RF_regularized.txt
diabete-mlflow/notebooks/: responses.ipynb
diabete-mlflow/src/: data_loader.py  evaluate.py  train.py
diabletes_mlops/: .gitignore  config.py  pytest.ini  run_buggy.py
diabletes_mlops/models/: report_RF_balanced.txt  report_RF_large_balanced.txt
diabletes_mlops/notebooks/: tp_mlflow.ipynb  tp_tests.ipynb
diabletes_mlops/src/: data_loader.py  evaluate.py  train.py
diabletes_mlops/tests/: conftest.py  test_data_loader.py  test_evaluate.py  test_pipeline.py
dvc-airquality/: .gitignore  dvc-airquality-lab.ipynb  dvc.yaml  params.yaml
dvc-airquality/.dvc/: config
dvc-airquality/data/features/: test_feat.csv  train_feat.csv  val_feat.csv
dvc-airquality/data/processed/: test.csv  train.csv  val.csv
dvc-airquality/data/raw/: AirQualityUCI.csv.dvc
dvc-airquality/metrics/: report.json  scores.json
dvc-airquality/models/: model.pkl
dvc-airquality/src/: download_data.py  evaluate.py  featurize.py  params.yaml  prepare.py  train.py
imbalanced-data/: data-imbalance-lab.ipynb
mlflow-lab/: mlflow-lab.ipynb
