[project]
name = "mlops"
version = "0.1.0"
description = "mlops labs S4 2IA"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dvc[gdrive]>=3.67.1",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
]
