[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "dvc>=3.67.1",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "matplotlib>=3.10.9",
    "mlflow>=3.12.0",
    "mypy>=2.1.0",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pip>=26.1.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
]
